--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon main.js",
+    "start": "nodemon ./src/main/config/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,8 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.1.1",
-    "dotenv": "^16.0.1",
-    "nodemon": "^2.0.19",
-    "prisma": "^4.1.1"
+    "@types/ip": "^1.1.0",
+    "@types/node": "^18.7.23",
+    "@types/split": "^1.0.2",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.24.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1"
   }
 }
