--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/main/config/app.ts",
+    "start": "nodemon ./src/main/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,9 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.24.0",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "split": "^1.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   }
 }
